[gd_scene load_steps=10 format=3 uid="uid://cuwici4yilo5s"]

[ext_resource type="Script" path="res://Scripts/Systems/customBorder.gd" id="1_i4cjs"]
[ext_resource type="Texture2D" uid="uid://dltcdswd6xckr" path="res://Sprites/HUD/spr_windowBorder.png" id="2_50k4f"]
[ext_resource type="Texture2D" uid="uid://dawavwdlyllit" path="res://Sprites/HUD/spr_windowIcons.png" id="3_yk5ek"]
[ext_resource type="FontFile" uid="uid://b40vcw171lfar" path="res://Fonts/DigitalDisco.ttf" id="4_uy1p5"]
[ext_resource type="Texture2D" uid="uid://dvp5uvwe4hsep" path="res://Sprites/HUD/spr_appIcon.png" id="5_4dvrn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28uc6"]
size = Vector2(962, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x81xp"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqgf4"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cf8to"]
size = Vector2(40, 40)

[node name="CustomBorder" type="CanvasLayer"]
process_mode = 3
layer = 128

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
script = ExtResource("1_i4cjs")

[node name="Area2D" type="Area2D" parent="Control"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Area2D"]
position = Vector2(479, 35)
shape = SubResource("RectangleShape2D_28uc6")

[node name="SprWindowBorder" type="Sprite2D" parent="Control"]
position = Vector2(0, -40)
scale = Vector2(480, 1)
texture = ExtResource("2_50k4f")
centered = false

[node name="Exit" type="Sprite2D" parent="Control/SprWindowBorder"]
position = Vector2(1.91667, 0)
scale = Vector2(0.00208333, 1)
texture = ExtResource("3_yk5ek")
centered = false
hframes = 4

[node name="ExitArea2D" type="Area2D" parent="Control/SprWindowBorder/Exit"]
position = Vector2(-6.10352e-05, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/SprWindowBorder/Exit/ExitArea2D"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_x81xp")

[node name="Size" type="Sprite2D" parent="Control/SprWindowBorder"]
position = Vector2(1.83333, 0)
scale = Vector2(0.00208333, 1)
texture = ExtResource("3_yk5ek")
centered = false
hframes = 4
frame = 2

[node name="SizeArea2D" type="Area2D" parent="Control/SprWindowBorder/Size"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/SprWindowBorder/Size/SizeArea2D"]
position = Vector2(19.9999, 20)
shape = SubResource("RectangleShape2D_aqgf4")

[node name="Minimize" type="Sprite2D" parent="Control/SprWindowBorder"]
position = Vector2(1.75, 0)
scale = Vector2(0.00208333, 1)
texture = ExtResource("3_yk5ek")
centered = false
hframes = 4
frame = 3

[node name="MinimizeArea2D" type="Area2D" parent="Control/SprWindowBorder/Minimize"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/SprWindowBorder/Minimize/MinimizeArea2D"]
position = Vector2(19.9999, 20)
shape = SubResource("RectangleShape2D_cf8to")

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = -40.0
offset_right = -680.0
offset_bottom = -556.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_uy1p5")
text = "Voiceless"

[node name="Karuicon" type="Sprite2D" parent="Control/RichTextLabel"]
position = Vector2(-13.5, 6.5)
texture = ExtResource("5_4dvrn")

[node name="Right" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.992
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.3201
offset_bottom = -28.0
mouse_filter = 2

[node name="Bottom" type="Control" parent="Control"]
layout_mode = 1
anchor_top = 0.993
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.22
offset_right = -24.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Corner" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -28.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[connection signal="input_event" from="Control/Area2D" to="Control" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Control/Area2D" to="Control" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Control/Area2D" to="Control" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Control/SprWindowBorder/Exit/ExitArea2D" to="Control" method="_on_exit_area_2d_input_event"]
[connection signal="input_event" from="Control/SprWindowBorder/Size/SizeArea2D" to="Control" method="_on_size_area_2d_input_event"]
[connection signal="input_event" from="Control/SprWindowBorder/Minimize/MinimizeArea2D" to="Control" method="_on_minimize_area_2d_input_event"]
[connection signal="gui_input" from="Control/Right" to="Control" method="_on_resize_top_gui_input"]
[connection signal="gui_input" from="Control/Bottom" to="Control" method="_on_bottom_gui_input"]
[connection signal="gui_input" from="Control/Corner" to="Control" method="_on_corner_gui_input"]
